--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <html lang="pt-BR">
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <title>Aluraflix</title>
 </head>
 
 <body>
     <header>ALURAFLIX</header>
 
-    <section>
-        <div>
+    <section class="chamada">
+        <div class="chamada-videos">
             <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
             <p>#homem-aranha</p>
         </div>
@@ -21,6 +24,26 @@
         </div>
     </section>
 
-</body>
-
-</html>
+    <section class="categoria">
+        <h2>Cortes das Olimpiadas</h2>
+        <div class="categoria-videos">
+          <a href="https://www.youtube.com/watch?v=44pt8w67S8I">
+            <img src="https://img.youtube.com/vi/44pt8w67S8I/maxresdefault.jpg" />
+          </a>
+          <a href="https://www.youtube.com/watch?v=F3wJzNQUivw">
+            <img src="https://img.youtube.com/vi/F3wJzNQUivw/maxresdefault.jpg" />
+          </a>
+          <a href="https://www.youtube.com/watch?v=9rVKos-oGnQ">
+            <img src="https://img.youtube.com/vi/9rVKos-oGnQ/maxresdefault.jpg" />
+          </a>
+          <a href="https://www.youtube.com/watch?v=GsJ0Iw8vxLo">
+            <img src="https://img.youtube.com/vi/GsJ0Iw8vxLo/maxresdefault.jpg" />
+          </a>
+          <a href="https://www.youtube.com/watch?v=i5c6Jc8AMis">
+            <img src="https://img.youtube.com/vi/i5c6Jc8AMis/maxresdefault.jpg" />
+          </a>
+        </div>
+      </section>
+      
+    </body>
+    </html>
